# $Id$
2007-09-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Early OpenID support.  The auth server can now be used as an identity provider, with your profile page as the identity URL
	
2007-09-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* Dependencies installation:  Improve layout, add embryo of unified install sytem (currently works for tarballs).  Improve error output.
	* Add dependencies for future OpenId support
	* AbstractDb:  Make sure to throw an exception, avoiding a blank page when trying to access the index page on a auth server that hasn't been setup.  Patch by Mathieu Bruno.

2007-09-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* cron/page.php:  Improve script to output what it did.
	* fix typo in Node::DEPRECATEDgetTechnicalOfficers(), that prevented getting the users to page in case a node is down.
	* Delete leftover login.tpl
	* Apply patch from leandro@texnet.it to fix #371
	
2007-08-30 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Experimental fix for #353

2007-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix bug that would manifest as a blank page at the "Checking Dependency" stage if PHP's postgres module was not installed.  Thanks to drfense for providing an account on a server where the bug occured.

2007-08-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Added vacuum_last_resort_fix_backup_restore_database.sh.  This is DANGEROUS, and should only be run when your neglected (or had problem with) your VACCUMs,
	your database has become slow as molases, and VACUUM FULL is not an option because your db has grown too big.
	
2007-08-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix #368: Correct the svn source for SimplePie 1.0, the 1.0b2 branch was unexpectedly renamed.  
	Note that this forces a rather disruptive change.  To update an existing install, you'll need to run the following commands:
	cd lib/simplepie
	svn switch http://svn.simplepie.org/simplepie/branches/1.0/