@@ -644,22 +644,27 @@ td.admin_element_tools,th.admin_element_tools {
 	display: inline;
 }
 
-/********** Content type section **********/ /* MainMenu */
-#nav,#nav ul {
-	float: left;
-	width: auto;
+/********** Content type section **********/ 
+/* MainMenu */
+
+
+#nav,#nav ul { /* all lists */
+	padding: 0;
+	margin: 0 0 1em 0;
 	list-style: none;
 	line-height: 1;
+	/* WD specific */
+	float: left;
+	width: auto;
 	background: white;
 	font-weight: bold;
-	padding: 0;
 	border: solid #d7d5d5;
 	border-width: 1px 0;
-	margin: 0 0 1em 0;
 	z-index: 99;
 }
 
 #nav {
+	/* WD specific, this must be after the #nav,#nav ul, it will apply only to the top menu items */
 	background: none;
 	margin: 0 0 0 0;
 	border: none;
@@ -668,53 +673,55 @@ td.admin_element_tools,th.admin_element_tools {
 	float: none;
 }
 
-#nav>li {
-	border-left: 1px solid #d7d5d5;
-	border-right: 1px solid #d7d5d5;
-		border-bottom: 1px solid #d7d5d5;
-}
-
-#nav a {
+#nav a { /* WD specific */
 	display: block;
 	width: 10em;
 	w\idth: 6em;
-	/*color: #7C6240;*/
 	text-decoration: none;
 	padding: 0.25em 2em;
 }
 
-#nav a.daddy {
-	background: url(rightarrow2.gif) center right no-repeat;
-}
-
-#nav li {
+#nav li { /* all list items */
 	float: left;
+	width: 10em; /* width needed or else Opera goes nuts */
+	/* WD specific */
 	padding: 0;
-	width: 10em;
 }
 
-#nav li ul {
+#nav>li { /* WD specific */
+	border-left: 1px solid #d7d5d5;
+	border-right: 1px solid #d7d5d5;
+	border-bottom: 1px solid #d7d5d5;
+}
+
+#nav li li { /* WD specific */
+	padding-right: 1em;
+	width: 13em
+}
+
+#nav li ul a { /* WD specific */
+	width: 13em;
+	w\idth: 9em;
+}
+
+#nav li ul { /* second-level lists */
 	position: absolute;
-	left: -999em;
-	height: auto;
 	width: 14.4em;
+	left: -999em;
+	/* using left instead of display to hide menus because display: none isn't read by screen readers */
+	/* WD specific */
+	height: auto;
 	w\idth: 13.9em;
 	font-weight: normal;
 	border-width: 0.25em;
 	margin: 0;
 }
 
-#nav li li {
-	padding-right: 1em;
-	width: 13em
+#nav li:hover ul { /* WD specific */
+	left: auto;
 }
 
-#nav li ul a {
-	width: 13em;
-	w\idth: 9em;
-}
-
-#nav li ul ul {
+#nav li ul ul { /* third-and-above-level lists */
 	margin: -1.75em 0 0 14em;
 }
 
@@ -724,11 +731,11 @@ td.admin_element_tools,th.admin_element_tools {
 }
 
 #nav li:hover ul,#nav li li:hover ul,#nav li li li:hover ul,#nav li.sfhover ul,#nav li li.sfhover ul,#nav li li li.sfhover ul
-	{
+	{ /* lists nested under hovered list items */
 	left: auto;
 }
 
-#nav li:hover,#nav li.sfhover {
+#nav li:hover,#nav li.sfhover { /* WD specific */
 	background: #f5f5f5;
 }
 
@@ -799,7 +806,7 @@ fpr_empty_feeds {
 	width: 100%;
 	z-index: 100;
 	opacity: 0.90;
-	filter: alpha(opacity =   90);
+	filter: alpha(opacity =     90);
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -1369,36 +1376,54 @@ fieldset .red {
 }
 
 \html
+
  
+
 div
+
+
 .tableContainer
+
  
+
 table
-  /* */
+
+   /* */
 {
 margin
+
+
 :
- 
 0
 -16
 px
+
  
+
 0
 0
 }
 \html
+
  
+
 div
+
+
 .tableContainer
-  /* */
+
+   /* */
 {
 padding
+
+
 :
- 
 0
 16
 px
+
  
+
 0
 0;
 }
